<resources>
    <string name="app_name">My Portfolio</string>
    <string name="my_name">Ankit\'s Nanodegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="my_app">CAPSTONE: MY OWN APP</string>
</resources>
